--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="w-full max-w-7xl mx-auto bg-white p-6 sm:p-8 rounded-xl shadow-lg">
         <h1 class="text-4xl sm:text-5xl font-extrabold text-center text-accent mb-8">
-            Materias de Mi Princesa
+            Materias de Mi Princesa 👑
         </h1>
 
         <!-- Leyenda de estados -->
