--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body class="min-h-screen flex flex-col items-center py-8 px-4 sm:px-6 lg:px-8 bg-gray-100 text-darkText">
 
     <div class="w-full max-w-7xl mx-auto bg-white p-6 sm:p-8 rounded-xl shadow-lg">
-        <h1 class="text-4xl sm:text-5xl font-extrabold text-center text-accent mb-8">
+        <h1 class="text-4xl sm:text-5xl font-extrabold text-center text-rose-500 mb-8">
             Materias de Mi Princesa 👑
         </h1>
 
