--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         pending: '#cbd5e1', // Gris claro - Pendiente
                         inProgress: '#fcd34d', // Amarillo - En Curso
                         completed: '#34d399', // Verde - Completada
-                        accent: '#4f46e5', // Morado - Color de acento
+                        accent: '#FAA08E', // Morado - Color de acento
                         darkText: '#1f2937', // Gris oscuro para texto
                         lightText: '#f9fafb', // Blanco para texto
                     }
