--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                         inProgress: '#fcd34d', // Amarillo - En Curso
                         completed: '#34d399', // Verde - Completada
                         accent: '#FAA08E', // Morado - Color de acento
-                        darkText: '#1f2937', // Gris oscuro para texto
+                        accentHover: '#9f1239',
+                        darkText: '#9f1239', // Gris oscuro para texto
                         lightText: '#f9fafb', // Blanco para texto
                     }
                 }
