--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             Materias de Mi Princesa 👑
         </h1>
 
+        <!-- Imagen añadida aquí -->
+        <div class="flex justify-center mb-8">
+            <img src="https://imgur.com/a/rdHZU18" 
+                 alt="Imagen de mi princesa" 
+                 class="rounded-lg shadow-md max-w-full h-auto">
+        </div>
+
         <!-- Leyenda de estados -->
         <div class="flex flex-wrap justify-center gap-4 mb-8">
             <div class="flex items-center gap-2 px-3 py-1 bg-pending rounded-full shadow-sm text-sm sm:text-base">
