--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Imagen añadida aquí -->
         <div class="flex justify-center mb-8">
-            <img src="https://imgur.com/a/rdHZU18" 
+            <img src="https://ibb.co/SXQxT5y9" 
                  alt="Imagen de mi princesa" 
                  class="rounded-lg shadow-md max-w-full h-auto">
         </div>
