--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Imagen añadida aquí -->
         <div class="flex justify-center mb-8">
-            <img src="https://ibb.co/SXQxT5y9" 
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/026/753/431/small/monochrome-butterfly-beautiful-insect-with-big-black-wings-drawing-of-a-flying-beetle-suitable-for-sandblasting-laser-and-plotter-cutting-vector.jpg" 
                  alt="Imagen de mi princesa" 
                  class="rounded-lg shadow-md max-w-full h-auto">
         </div>
