--- a/index.html
+++ b/index.html
@@ -42,11 +42,18 @@
 
         <!-- Imagen añadida aquí -->
         <div class="flex justify-center mb-8">
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/026/753/431/small/monochrome-butterfly-beautiful-insect-with-big-black-wings-drawing-of-a-flying-beetle-suitable-for-sandblasting-laser-and-plotter-cutting-vector.jpg" 
-                 alt="Imagen de mi princesa" 
-                 class="rounded-lg shadow-md max-w-full h-auto">
+            <a href="https://ibb.co/SXQxT5y9">
+            <img src="https://i.ibb.co/RphSnYbV/Imagen-de-Whats-App-2025-07-24-a-las-15-54-23-ad3a6926.jpg" alt="Imagen-de-Whats-App-2025-07-24-a-las-15-54-23-ad3a6926" border="0">
+                </a>
         </div>
 
+
+
+
+
+
+
+        
         <!-- Leyenda de estados -->
         <div class="flex flex-wrap justify-center gap-4 mb-8">
             <div class="flex items-center gap-2 px-3 py-1 bg-pending rounded-full shadow-sm text-sm sm:text-base">
