--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
         <!-- Imagen añadida aquí -->
         <div class="flex justify-center mb-8">
             <a href="https://ibb.co/SXQxT5y9">
-            <img src="https://i.ibb.co/RphSnYbV/Imagen-de-Whats-App-2025-07-24-a-las-15-54-23-ad3a6926.jpg" alt="Imagen-de-Whats-App-2025-07-24-a-las-15-54-23-ad3a6926" border="0">
+            <img src="https://i.ibb.co/RphSnYbV/Imagen-de-Whats-App-2025-07-24-a-las-15-54-23-ad3a6926.jpg" 
+                alt="Imagen de mi princesa" 
+                 class="rounded-lg shadow-md max-w-full h-auto">
+
                 </a>
         </div>
 
