--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
             Materias de Mi Princesa 👑
         </h1>
 
-        <!-- Imagen añadida aquí -->
+       <!-- Imagen añadida aquí -->
         <div class="flex justify-center mb-8">
-        <a href="https://static.vecteezy.com/system/resources/thumbnails/026/753/431/small/monochrome-butterfly-beautiful-insect-with-big-black-wings-drawing-of-a-flying-beetle-suitable-for-sandblasting-laser-and-plotter-cutting-vector.jpg" 
-             alt="Imagen de mi princesa" 
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/026/753/431/small/monochrome-butterfly-beautiful-insect-with-big-black-wings-drawing-of-a-flying-beetle-suitable-for-sandblasting-laser-and-plotter-cutting-vector.jpg" 
+                 alt="Imagen de mi princesa" 
                  class="rounded-lg shadow-md max-w-full h-auto">
-                </a>
         </div>
   
         <!-- Leyenda de estados -->
